cursors; button/link/dropdown/dropzone/from/paramsLayout/select/title; vars;

--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -8,3 +8,4 @@
 @import '../scss/utility/scroll-bar.scss';
 @import '../scss/blanks/blanks';
 @import '../scss/pages/pages';
+@import '../scss/ui/ui';
