--- a/frontend/src/assets/scss/utility/vars/other.scss
+++ b/frontend/src/assets/scss/utility/vars/other.scss
@@ -16,3 +16,5 @@ $zIndexContextMenu: 100;
 $sidebarWidthS: toRem(240);
 $sidebarWidthM: toRem(320);
 $sidebarHeadHeight: toRem(56);
+
+$selectHeight: toRem(46);
