--- a/frontend/src/assets/scss/utility/animations.scss
+++ b/frontend/src/assets/scss/utility/animations.scss
@@ -142,6 +142,32 @@
     }
 }
 
+.fade-dropdown {
+    &-enter {
+        opacity: 0;
+
+        &-active {
+            transition: opacity 0.1s ease-in !important;
+        }
+
+        &-to {
+            opacity: 1;
+        }
+    }
+
+    &-leave {
+        opacity: 1;
+
+        &-active {
+            transition: opacity 0.1s ease-out !important;
+        }
+
+        &-to {
+            opacity: 0;
+        }
+    }
+}
+
 .fade {
     &-enter {
         opacity: 0;
